# web-scan

./: .gitignore  CHANGELOG.md  LICENSE  README.md  TROUBLESHOOTING.md  pyproject.toml
.agent_hooks/: run_all_hooks.py
.agent_hooks/shutdown/: 00_track_processes_on_ports.py
.github/workflows/: test.yml
docs/: architecture.md  legal-ethical.md  limitations.md  scoring.md  usage.md
src/trscan/: __init__.py  cli.py  scanner.py
src/trscan/analyzers/: __init__.py  cookie_analyzer.py  dns_analyzer.py  header_analyzer.py  page_analyzer.py  tls_analyzer.py
src/trscan/fetcher/: __init__.py  dns_fetcher.py  http_fetcher.py
src/trscan/models/: __init__.py  scan_result.py
src/trscan/reporter/: __init__.py  security_reporter.py
src/trscan/scorer/: __init__.py  security_scorer.py
tests/: __init__.py  header_analyzer_test.py  scorer_test.py
